[gd_scene load_steps=36 format=3 uid="uid://dcw8f721b5sus"]

[ext_resource type="Script" path="res://scripts/green_slime.gd" id="1_dr6xg"]
[ext_resource type="Texture2D" uid="uid://bwotvq0iv1bwn" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00000.png" id="1_e2n6s"]
[ext_resource type="Texture2D" uid="uid://dlqgmc3ifgu40" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00001.png" id="2_yrkhp"]
[ext_resource type="Texture2D" uid="uid://dhjtwu5md33gk" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00002.png" id="3_o0sr5"]
[ext_resource type="Texture2D" uid="uid://5ehuir6lghxy" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00003.png" id="4_wwuv3"]
[ext_resource type="Texture2D" uid="uid://f4wrnhiav0ge" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00004.png" id="5_ji3i4"]
[ext_resource type="Texture2D" uid="uid://but1flb7x3jpe" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00005.png" id="6_pbmov"]
[ext_resource type="Texture2D" uid="uid://6ymmva2vfp43" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00006.png" id="7_qpm3g"]
[ext_resource type="Texture2D" uid="uid://deeyh8jknsyb7" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00007.png" id="8_n53pb"]
[ext_resource type="Texture2D" uid="uid://dneee3kb051ma" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00008.png" id="9_063xx"]
[ext_resource type="Texture2D" uid="uid://c1ueitw64esto" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00009.png" id="10_u4t1e"]
[ext_resource type="Texture2D" uid="uid://nk8obi28bsxj" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00010.png" id="11_ru17k"]
[ext_resource type="Texture2D" uid="uid://t47kbtj0cqt5" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00011.png" id="12_cdcl5"]
[ext_resource type="Texture2D" uid="uid://pl4fgpbf6uak" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00012.png" id="13_tm4iw"]
[ext_resource type="Texture2D" uid="uid://3xqoee42vcj3" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00013.png" id="14_x502y"]
[ext_resource type="Texture2D" uid="uid://dit5qey2k7nso" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00014.png" id="15_y8mkg"]
[ext_resource type="Texture2D" uid="uid://c6n42egd3yxgh" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00015.png" id="16_q4np7"]
[ext_resource type="Texture2D" uid="uid://b5q1bi4s7n2lm" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00016.png" id="17_sybud"]
[ext_resource type="Texture2D" uid="uid://bkmuoehs306di" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00017.png" id="18_m23pq"]
[ext_resource type="Texture2D" uid="uid://ch7kfruk75k4w" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00018.png" id="19_1mw45"]
[ext_resource type="Texture2D" uid="uid://dglt06lumq2dm" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00019.png" id="20_e6yrq"]
[ext_resource type="Texture2D" uid="uid://dge7ujs2a0pn7" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00020.png" id="21_ieua1"]
[ext_resource type="Texture2D" uid="uid://c02ed16dbwylf" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00021.png" id="22_q2sge"]
[ext_resource type="Texture2D" uid="uid://b1ymln3gfyubs" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00022.png" id="23_h31rx"]
[ext_resource type="Texture2D" uid="uid://v0s7hr63gn5t" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00023.png" id="24_w8yj3"]
[ext_resource type="Texture2D" uid="uid://d25qq1kkbvkcb" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00024.png" id="25_j2dn8"]
[ext_resource type="Texture2D" uid="uid://cxf4w6lv8uovs" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00025.png" id="26_n23bf"]
[ext_resource type="Texture2D" uid="uid://0sedb117syvq" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00026.png" id="27_a7t0g"]
[ext_resource type="Texture2D" uid="uid://d6a47gswwy16" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00027.png" id="28_pkku5"]
[ext_resource type="Texture2D" uid="uid://bnc3ff8573iyh" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00028.png" id="29_0fej3"]
[ext_resource type="Texture2D" uid="uid://tijlr6ekw2qb" path="res://assets/MossyCavern/SlimeGreen/SlimeBasic_00029.png" id="30_slc7g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dsvoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_e2n6s")
}, {
"duration": 1.0,
"texture": ExtResource("2_yrkhp")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0sr5")
}, {
"duration": 1.0,
"texture": ExtResource("4_wwuv3")
}, {
"duration": 1.0,
"texture": ExtResource("5_ji3i4")
}, {
"duration": 1.0,
"texture": ExtResource("6_pbmov")
}, {
"duration": 1.0,
"texture": ExtResource("7_qpm3g")
}, {
"duration": 1.0,
"texture": ExtResource("8_n53pb")
}, {
"duration": 1.0,
"texture": ExtResource("9_063xx")
}, {
"duration": 1.0,
"texture": ExtResource("10_u4t1e")
}, {
"duration": 1.0,
"texture": ExtResource("11_ru17k")
}, {
"duration": 1.0,
"texture": ExtResource("12_cdcl5")
}, {
"duration": 1.0,
"texture": ExtResource("13_tm4iw")
}, {
"duration": 1.0,
"texture": ExtResource("14_x502y")
}, {
"duration": 1.0,
"texture": ExtResource("15_y8mkg")
}, {
"duration": 1.0,
"texture": ExtResource("16_q4np7")
}, {
"duration": 1.0,
"texture": ExtResource("17_sybud")
}, {
"duration": 1.0,
"texture": ExtResource("18_m23pq")
}, {
"duration": 1.0,
"texture": ExtResource("19_1mw45")
}, {
"duration": 1.0,
"texture": ExtResource("20_e6yrq")
}, {
"duration": 1.0,
"texture": ExtResource("21_ieua1")
}, {
"duration": 1.0,
"texture": ExtResource("22_q2sge")
}, {
"duration": 1.0,
"texture": ExtResource("23_h31rx")
}, {
"duration": 1.0,
"texture": ExtResource("24_w8yj3")
}, {
"duration": 1.0,
"texture": ExtResource("25_j2dn8")
}, {
"duration": 1.0,
"texture": ExtResource("26_n23bf")
}, {
"duration": 1.0,
"texture": ExtResource("27_a7t0g")
}, {
"duration": 1.0,
"texture": ExtResource("28_pkku5")
}, {
"duration": 1.0,
"texture": ExtResource("29_0fej3")
}, {
"duration": 1.0,
"texture": ExtResource("30_slc7g")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rw57e"]
radius = 77.0
height = 248.0

[sub_resource type="Gradient" id="Gradient_xousg"]
offsets = PackedFloat32Array(0.149351, 0.688312)
colors = PackedColorArray(0.360615, 1, 0.414423, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5iyb0"]
gradient = SubResource("Gradient_xousg")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="GreenSlime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_dr6xg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_dsvoj")
autoplay = "default"
frame_progress = 0.132549

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rw57e")

[node name="WallRayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="EdgeRayCast2D" type="RayCast2D" parent="."]

[node name="PlayerRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 1750)
collision_mask = 4

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = SubResource("GradientTexture2D_5iyb0")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
